<resources>
    <string name="app_name">My Silver Shield</string>
    <string name="welcome_to_my_silver_shield">Welcome to My Silver Shield</string>
    <string name="is_this_a_scam">IS THIS A SCAM?</string>
    <string name="recent_scam_news">Recent Scam News</string>
    <string name="settings">Settings</string>
    <string name="long_press_on_contact_to_delete_click_sos_button_below_to_alert">LONG PRESS ON CONTACT TO DELETE CLICK "SOS" BUTTON BELOW TO ALERT</string>
    <string name="test">TEST</string>
    <string name="mysilvershield_logo">MySilverShield_Logo</string>
    <string name="mysilvershieldlogo1">MySilverShieldLogo</string>
    <string name="is_this_a_scam1">Is This a Scam?</string>
    <string name="recent_scam_news1">Recent Scam News</string>
    <string name="sos">SOS</string>
    <string name="ice_info1">ICE Info</string>
    <string name="flashlight">Flashlight</string>
    <string name="password_manager">Password Manager</string>
    <string name="mysilvershieldlogo">MySilverShieldLogo</string>
    <string name="step_2_identification">Step 2: Identification</string>
    <string name="u20d62">⃖</string>
    <string name="step_2_identification1">Step 2: Identification</string>
    <string name="u20d61">⃖</string>
    <string name="mysilvershieldlogo2">MySilverShieldLogo</string>
    <string name="is_it_a_call">Is it a call?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_it_a_pop_up_on_your_phone_computer_screen">Is it a pop-up on your phone / computer screen?</string>
    <string name="is_it_an_email">Is it an Email?</string>
    <string name="ftc_gov">FTC.GOV</string>
    <string name="usa_gov">USA.GOV</string>
    <string name="usa_gov1">USA.GOV</string>
    <string name="ftc_gov1">FTC.GOV</string>
    <string name="usa_gov2">USA.GOV</string>
    <string name="ftc_gov2">FTC.GOV</string>
    <string name="phishing_info">Phishing Info</string>
    <string name="u20d6">⃖</string>
    <string name="usa_gov3">USA.GOV</string>
    <string name="ftc_gov3">FTC.GOV</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="long_press_on_contact_to_delete">LONG PRESS ON CONTACT TO DELETE</string>
    <string name="click_sos_button_below_to_send_your_location_to_your_contacts">CLICK "SOS" BUTTON BELOW TO SEND YOUR LOCATION TO YOUR CONTACTS</string>
    <string name="sos1">SOS</string>
    <string name="edit_my_personal_info">Edit My Personal Info</string>
    <string name="click_the_edit_my_personal_info_button_above_to_add_your_info">CLICK THE \'EDIT MY PERSONAL INFO\' BUTTON ABOVE TO ADD YOUR INFO</string>
    <string name="long_press_on_info_to_delete">LONG PRESS ON INFO TO DELETE</string>
    <string name="add_medical_conditions">Add Medical Conditions</string>
    <string name="long_press_on_info_to_delete2">LONG PRESS ON INFO TO DELETE</string>
    <string name="add_medications">Add Medications</string>
    <string name="long_press_on_info_to_delete3">LONG PRESS ON INFO TO DELETE</string>
    <string name="add_allergies">Add Allergies</string>
    <string name="long_press_on_info_to_delete4">LONG PRESS ON INFO TO DELETE</string>
    <string name="medicalcondition">MedicalCondition</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone_number">Phone Number</string>
    <string name="insurance_provider">Insurance Provider</string>
    <string name="address1">Address</string>
    <string name="blood_type">Blood Type</string>
    <string name="medication">Medication</string>
    <string name="app_website_name">App / Website Name</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="allergy">Allergy</string>
    <string name="first_name1">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="date_of_birth1">Date of Birth</string>
    <string name="address2">Address</string>
    <string name="city1">City</string>
    <string name="zipcode1">Zipcode</string>
    <string name="phone_number1">Phone Number</string>
    <string name="insurance_provider1">Insurance Provider</string>
    <string name="policy_number">Policy Number</string>
    <string name="blood_type1">Blood Type</string>
    <string name="long_press_on_account_to_delete">LONG PRESS ON ACCOUNT TO DELETE</string>
    <string name="press_add_account_button_to_add_new_account">PRESS \'ADD ACCOUNT\' BUTTON TO ADD NEW ACCOUNT</string>
    <string name="add_account">Add Account</string>
    <string name="app_website_name1">App / Website name</string>
    <string name="username_email_address">Username / Email Address</string>
    <string name="password1">Password</string>
    <string name="allergy1">Allergy</string>
    <string name="medical_condition">Medical Condition</string>
    <string name="medical_condition1">Medical Condition</string>
    <string name="ice_info">ICE Info</string>
    <string name="isthisascam_appwidget_button">Is This A Scam?</string>
    <string name="recentscamnews_appwidget_button">Recent Scam News</string>
    <string name="sos_appwidget_button">SOS</string>
    <string name="iceinfo_appwidget_button">ICE Info</string>
    <string name="flashlight_appwidget_button">Flashlight</string>
    <string name="passwordmanager_appwidget_button">Password Manager</string>
    <string name="add_widget">Add widget</string>
</resources>