<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/tvFirstName"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvLastName"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvDateOfBirth"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/date_of_birth"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvAddress"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvCity"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvZipcode"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/zipcode"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvInsuranceProvider"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/insurance_provider"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvPolicyNumber"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvBloodType"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A6A6"
        android:text="@string/blood_type"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

</LinearLayout>