<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".recentscamnews.RecentScamNews"
    android:keepScreenOn="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="502dp"
        android:layout_height="474dp"
        android:contentDescription="@string/mysilvershieldlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/recent_scam_news"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage"
        tools:text="Recent Scam News" />

    <Button
        android:id="@+id/button1"
        android:layout_width="304dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#59000000"
        android:shadowColor="#8D959595"
        android:text="@string/usa_gov"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E0000"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/button2"
        tools:ignore="SpUsage"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/button2"
        android:layout_width="304dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#59000000"
        android:shadowColor="#8D959595"
        android:text="@string/ftc_gov"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E0000"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        tools:ignore="SpUsage"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="#59000000"
        android:padding="@dimen/cardview_default_radius"
        android:shadowColor="#8D959595"
        android:text="@string/u20d6"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E0000"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>