<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    android:keepScreenOn="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#59000000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvApp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/app_website_name"
                android:textColor="@color/black"
                android:textSize="24dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvUsername"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/username_email"
                android:textColor="@color/white"
                android:textSize="27dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvPassword"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="27dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>