<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    android:keepScreenOn="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="502dp"
        android:layout_height="474dp"
        android:contentDescription="@string/mysilvershieldlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="200dp"
        android:layout_height="@+id/ListView"
        android:layout_margin="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:backgroundTint="#59000000"
        android:shadowColor="#8D959595"
        android:text="@string/add_emergency_contact"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#59000000"
        android:shadowColor="#8D959595"
        android:text="@string/sos"
        android:textColor="#FFFFFF"
        android:textSize="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="12dp"
        tools:ignore="SpUsage"
        tools:targetApi="lollipop" />

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="@id/textView1"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button1">

    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:gravity="center"
        android:text="@string/long_press_on_contact_to_delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ListView"
        tools:text="LONG PRESS ON CONTACT TO DELETE"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/click_sos_button_below_to_send_your_location_to_your_contacts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@id/Button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        tools:text="CLICK SOS BUTTON BELOW TO SEND YOUR LOCATION TO YOUR CONTACTS"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="#59000000"
        android:padding="@dimen/cardview_default_radius"
        android:shadowColor="#8D959595"
        android:text="@string/u20d6"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E0000"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@id/Button1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>